@@ -96,6 +96,7 @@ Revision:
 * #722: description for image upload content area is now fully readable (IPF) (Phoenyx)
 * #293: About page in imProfile is working properly now | ticket from addons (Phoenyx)
 * #284: pictures, tribe pictures and audio files are now deleted together with the record | ticket from addons (Phoenyx)
+* #291: Only fields set to editable can be edited in profile module | ticket from addons (wtravel)
 
 ===2009-06-20 : 1.2 Alpha 2.1 ===
 '''Fixed'''
